# svara

./: CHANGELOG.md  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: main.yml  publish.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/config/: commands.ts  config.ts  themehandler.ts
src/lib/: EditorTabList.svelte  File.ts  FileTree.svelte  Header.svelte  Settings.svelte  Statusbar.svelte  Terminal.svelte  Welcome.svelte
src/lib/FileTree/: FileTreeList.svelte  FileTreeNode.svelte
src/lib/Modals/: InputModal.svelte  RenameModal.svelte
src/lib/Tab/: Tab.ts
src/lib/utility/: ContextMenu.svelte  NotSupported.svelte
