[package]
name = "svara"
version = "0.4.0"
description = "Svara is a simple and lightweight code editor for Linux, Windows, and MacOS."
authors = ["mellobacon", "setoelkahfi"]
license = "GPL-3.0"
repository = "https://github.com/setoelkahfi/svara"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
trash = "3.0.2"
encoding_rs = "0.8.32"
time = "0.3.28"
log = "^0.4"
infer = "0.3"
tokio = { version = "1", features = ["time"] }
tauri-plugin-pty = "0.1.0"
tauri-plugin-process = "2"
tauri-plugin-store = { version = "2" }
tauri-plugin-log = { version = "2" }
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-opener = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
